--- a/desktop/src/main/resources/org/example/desktop/productos-view.fxml
+++ b/desktop/src/main/resources/org/example/desktop/productos-view.fxml
@@ -73,7 +73,7 @@
                                 <Font name="System Bold" size="12.0" />
                             </font>
                         </Label>
-                        <ComboBox fx:id="menuCategorias" prefHeight="30.0" prefWidth="330.0" promptText="Seleccione categoría" styleClass="crud-combo"> <items>
+                        <ComboBox fx:id="menuCategorias" prefHeight="30.0" prefWidth="353.0" promptText="Seleccione categoría" styleClass="crud-combo"> <items>
                             <FXCollections fx:factory="observableArrayList">
                                 <String fx:value="Categoría 1" />
                                 <String fx:value="Categoría 2" />
@@ -89,7 +89,7 @@
                                 <Font name="System Bold" size="12.0" />
                             </font>
                         </Label>
-                        <ComboBox fx:id="menuEstado" prefHeight="30.0" prefWidth="330.0" promptText="Seleccione estado" styleClass="crud-combo"> <items>
+                        <ComboBox fx:id="menuEstado" prefHeight="41.0" prefWidth="361.0" promptText="Seleccione estado" styleClass="crud-combo"> <items>
                             <FXCollections fx:factory="observableArrayList">
                                 <String fx:value="Activo" />
                                 <String fx:value="Inactivo" />
@@ -105,7 +105,7 @@
                                 <Font name="System Bold" size="12.0" />
                             </font>
                         </Label>
-                        <ComboBox fx:id="menuProveedor" prefHeight="30.0" prefWidth="330.0" promptText="Seleccione proveedor" styleClass="crud-combo"> <items>
+                        <ComboBox fx:id="menuProveedor" prefHeight="41.0" prefWidth="362.0" promptText="Seleccione proveedor" styleClass="crud-combo"> <items>
                             <FXCollections fx:factory="observableArrayList">
                                 <String fx:value="Proveedor 1" />
                                 <String fx:value="Proveedor 2" />
@@ -117,19 +117,17 @@
                 </children>
                 </VBox>
 
-                <VBox layoutX="5.0" layoutY="730.0" prefWidth="350.0" spacing="8.0"> <children>
+                <VBox layoutX="14.0" layoutY="702.0" prefWidth="350.0" spacing="8.0"> <children>
                     <HBox spacing="10.0"> <children>
-                        <Button fx:id="agregar" prefHeight="38.0" prefWidth="165.0" styleClass="crud-button-primary" text="Agregar" /> <Button fx:id="ver" prefHeight="38.0" prefWidth="165.0" styleClass="crud-button-modify" text="Modificar" /> </children>
+                        <Button fx:id="agregar" prefHeight="38.0" prefWidth="177.0" styleClass="crud-button-primary" text="Agregar" /> <Button fx:id="ver" prefHeight="38.0" prefWidth="181.0" styleClass="crud-button-modify" text="Modificar" /> </children>
                     </HBox>
 
                     <HBox spacing="10.0"> <children>
+                            <Button fx:id="categorias" prefHeight="38.0" prefWidth="164.0" styleClass="crud-button-categoria" text="Categorias" />
                         <Button fx:id="actualizar" prefHeight="38.0" prefWidth="165.0" styleClass="crud-button-secondary" text="Actualizar" /> <Button fx:id="desactivar" prefHeight="38.0" prefWidth="165.0" styleClass="crud-button-danger" text="Desactivar" /> </children>
                     </HBox>
 
-                    <HBox alignment="CENTER" spacing="10.0">
-                        <children>
-                            <Button fx:id="categorias" prefHeight="38.0" prefWidth="340.0" styleClass="crud-button-categoria" text="Categorias" /> </children>
-                    </HBox>
+                    <HBox alignment="CENTER" spacing="10.0" />
                 </children>
                 </VBox>
             </children>
@@ -159,5 +157,6 @@
 
     <stylesheets>
         <URL value="@estilos/crud.css" />
+        <URL value="@estilos/tabla.css" />
     </stylesheets>
 </BorderPane>
