cambios visuales en controladores

--- a/desktop/src/main/resources/org/example/desktop/estilos/login-register.css
+++ b/desktop/src/main/resources/org/example/desktop/estilos/login-register.css
@@ -26,14 +26,14 @@
 }
 
 .login-register-logo-image {
-    -fx-effect: dropshadow(gaussian, rgba(16, 185, 129, 0.4), 20, 0, 0, 5);
+    -fx-effect: dropshadow(gaussian, rgba(16, 185, 30, 0.4), 20, 0, 0, 5);
     -fx-cursor: hand;
 }
 
 .login-register-logo-image:hover {
     -fx-scale-y: 1.05;
     -fx-scale-x: 1.05;
-    -fx-effect: dropshadow(gaussian, rgba(16, 185, 129, 0.6), 25, 0, 0, 8);
+    -fx-effect: dropshadow(gaussian, rgba(53, 185, 16, 0.6), 25, 0, 0, 8);
 }
 
 .login-register-brand-title {
@@ -81,7 +81,7 @@
 }
 
 .login-register-register-button:hover {
-    -fx-background-color: #10b981;
+    -fx-background-color: #10b91e;
     -fx-text-fill: white;
     -fx-scale-y: 1.05;
     -fx-scale-x: 1.05;
@@ -183,12 +183,12 @@
 }
 
 .login-register-forgot-password-link:hover {
-    -fx-text-fill: #34d399;
+    -fx-text-fill: #56d334;
     -fx-underline: true;
 }
 
 .login-register-primary-button {
-    -fx-background-color: linear-gradient(to right, #10b981, #059669);
+    -fx-background-color: linear-gradient(to right, #3ab910, #3a9605);
     -fx-border-color: transparent;
     -fx-border-width: 0;
     -fx-border-radius: 12;
@@ -204,7 +204,7 @@
 .login-register-primary-button:hover {
     -fx-scale-y: 1.02;
     -fx-scale-x: 1.02;
-    -fx-effect: dropshadow(gaussian, rgba(16, 185, 129, 0.6), 20, 0, 0, 8);
+    -fx-effect: dropshadow(gaussian, rgba(22, 185, 16, 0.6), 20, 0, 0, 8);
 }
 
 .login-register-primary-button:pressed {
@@ -230,7 +230,7 @@
 
 .login-register-container TextField:focused,
 .login-register-container PasswordField:focused {
-    -fx-border-color: #10b981;
+    -fx-border-color: #16b910;
     -fx-background-color: rgba(30, 41, 59, 0.9);
     -fx-effect: dropshadow(gaussian, rgba(16, 185, 129, 0.3), 10, 0, 0, 0);
 }
@@ -249,7 +249,7 @@
 }
 
 .login-register-success-message {
-    -fx-text-fill: #10b981;
+    -fx-text-fill: rgba(16, 185, 30, 0.4);
     -fx-font-size: 14px;
 }
 
